--- a/support/httpd.conf
+++ b/support/httpd.conf
@@ -23,8 +23,8 @@ LogFormat "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combine
 LogFormat "%h %l %u %t \"%r\" %>s %b" common
 LogFormat "%{Referer}i -> %U" referer
 LogFormat "%{User-agent}i" agent
-CustomLog /usr/local/var/httpd/log/access_log common
-ErrorLog /usr/local/var/httpd/log/error_log
+CustomLog /var/log/httpd/access_log common
+ErrorLog /var/log/httpd/error_log
 
 AddType application/x-httpd-php .php .phtml .php3
 AddType application/x-httpd-php-source .phps
@@ -34,7 +34,7 @@ Options ExecCGI FollowSymLinks
 
 DocumentRoot "/var/www/gforge-3.0/www"
 
-MaxClients 50
+MaxClients 1000
 
 #Alias /wiki/ "/usr/share/moin/htdocs/" 
 #Alias /cougaarwiki/img/ "/usr/share/moin/htdocs/img/" 
@@ -108,8 +108,8 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 <VirtualHost *>
  ServerName bugs.cougaar.org
  DocumentRoot /var/www/bugzilla/
- CustomLog /usr/local/var/httpd/log/bugs.cougaar.org-access_log common
- ErrorLog /usr/local/var/httpd/log/bugs.cougaar.org-error_log
+ CustomLog /var/log/httpd/bugs.cougaar.org-access_log common
+ ErrorLog /var/log/httpd/bugs.cougaar.org-error_log
 </VirtualHost>
 
 <VirtualHost *>
@@ -128,8 +128,8 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 <VirtualHost *>
  ServerName tutorials.cougaar.org
  DocumentRoot /var/www/gforge-projects/tutorials
- CustomLog /usr/local/var/httpd/log/tutorials-access_log common
- ErrorLog /usr/local/var/httpd/log/tutorials-error_log
+ CustomLog /var/log/httpd/tutorials-access_log common
+ ErrorLog /var/log/httpd/tutorials-error_log
  <Directory "/var/www/gforge-projects/tutorials/wiki/">
   AddHandler cgi-script .pl
   Options ExecCGI
@@ -142,8 +142,8 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 <VirtualHost *>
  ServerName micro.cougaar.org
  DocumentRoot /var/www/gforge-projects/micro
- CustomLog /usr/local/var/httpd/log/micro-access_log common
- ErrorLog /usr/local/var/httpd/log/micro-error_log
+ CustomLog /var/log/httpd/micro-access_log common
+ ErrorLog /var/log/httpd/micro-error_log
  <Directory "/var/www/gforge-projects/micro/wiki/">
   AddHandler cgi-script .pl
   Options ExecCGI
@@ -156,8 +156,8 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 <VirtualHost *>
  ServerName cougaarunit.cougaar.org
  DocumentRoot /var/www/gforge-projects/cougaarunit
- CustomLog /usr/local/var/httpd/log/cougaarunit-access_log common
- ErrorLog /usr/local/var/httpd/log/cougaarunit-error_log
+ CustomLog /var/log/httpd/cougaarunit-access_log common
+ ErrorLog /var/log/httpd/cougaarunit-error_log
  <Directory "/var/www/gforge-projects/cougaarunit/wiki/">
   AddHandler cgi-script .pl
   Options ExecCGI
@@ -170,8 +170,8 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 <VirtualHost *>
  ServerName cui.cougaar.org
  DocumentRoot /var/www/gforge-projects/cui
- CustomLog /usr/local/var/httpd/log/cui-access_log common
- ErrorLog /usr/local/var/httpd/log/cui-error_log
+ CustomLog /var/log/httpd/cui-access_log common
+ ErrorLog /var/log/httpd/cui-error_log
  <Directory "/var/www/gforge-projects/cui/wiki/">
   AddHandler cgi-script .pl
   Options ExecCGI
@@ -184,8 +184,8 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 <VirtualHost *>
  ServerName support.cougaar.org
  DocumentRoot /var/www/gforge-projects/support
- CustomLog /usr/local/var/httpd/log/support-access_log common
- ErrorLog /usr/local/var/httpd/log/support-error_log
+ CustomLog /var/log/httpd/support-access_log common
+ ErrorLog /var/log/httpd/support-error_log
  Options Indexes
  IndexOptions FancyIndexing
  <Directory "/var/www/gforge-projects/support/wiki/">
@@ -200,8 +200,8 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 <VirtualHost *>
  ServerName csmart.cougaar.org
  DocumentRoot /var/www/gforge-projects/csmart
- CustomLog /usr/local/var/httpd/log/csmart-access_log common
- ErrorLog /usr/local/var/httpd/log/csmart-error_log
+ CustomLog /var/log/httpd/csmart-access_log common
+ ErrorLog /var/log/httpd/csmart-error_log
  <Directory "/var/www/gforge-projects/csmart/wiki/">
   AddHandler cgi-script .pl
   Options ExecCGI
@@ -214,8 +214,8 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 <VirtualHost *>
  ServerName cougaarlegacy.cougaar.org
  DocumentRoot /var/www/gforge-projects/cougaarlegacy
- CustomLog /usr/local/var/httpd/log/cougaarlegacy-access_log common
- ErrorLog /usr/local/var/httpd/log/cougaarlegacy-error_log
+ CustomLog /var/log/httpd/cougaarlegacy-access_log common
+ ErrorLog /var/log/httpd/cougaarlegacy-error_log
  <Directory "/var/www/gforge-projects/cougaarlegacy/wiki/">
   AddHandler cgi-script .pl
   Options ExecCGI
@@ -228,8 +228,8 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 <VirtualHost *>
  ServerName cougaar.cougaar.org
  DocumentRoot /var/www/gforge-projects/cougaar
- CustomLog /usr/local/var/httpd/log/cougaar-access_log common
- ErrorLog /usr/local/var/httpd/log/cougaar-error_log	
+ CustomLog /var/log/httpd/cougaar-access_log common
+ ErrorLog /var/log/httpd/cougaar-error_log	
 	<Directory "/var/www/gforge-projects/cougaar/">
 	  Options Indexes
 	</Directory>
@@ -238,8 +238,8 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 <VirtualHost *>
  ServerName bol2.cougaar.org
  DocumentRoot /var/www/gforge-projects/bol2
- CustomLog /usr/local/var/httpd/log/bol2-access_log common
- ErrorLog /usr/local/var/httpd/log/bol2-error_log
+ CustomLog /var/log/httpd/bol2-access_log common
+ ErrorLog /var/log/httpd/bol2-error_log
  <Directory "/var/www/gforge-projects/bol2/wiki/">
   AddHandler cgi-script .pl
   Options ExecCGI
@@ -252,8 +252,8 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 <VirtualHost *>
  ServerName cougaaride.cougaar.org
  DocumentRoot /var/www/gforge-projects/cougaaride
- CustomLog /usr/local/var/httpd/log/cougaaride-access_log common
- ErrorLog /usr/local/var/httpd/log/cougaaride-error_log
+ CustomLog /var/log/httpd/cougaaride-access_log common
+ ErrorLog /var/log/httpd/cougaaride-error_log
  <Directory "/var/www/gforge-projects/cougaaride/wiki/">
   AddHandler cgi-script .pl
   Options ExecCGI
@@ -266,8 +266,8 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 <VirtualHost *>
  ServerName vishnu.cougaar.org
  DocumentRoot /var/www/gforge-projects/vishnu
- CustomLog /usr/local/var/httpd/log/vishnu-access_log common
- ErrorLog /usr/local/var/httpd/log/vishnu-error_log
+ CustomLog /var/log/httpd/vishnu-access_log common
+ ErrorLog /var/log/httpd/vishnu-error_log
  <Directory "/var/www/gforge-projects/vishnu/wiki/">
   AddHandler cgi-script .pl
   Options ExecCGI
@@ -280,8 +280,8 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 <VirtualHost *>
  ServerName glm.cougaar.org
  DocumentRoot /var/www/gforge-projects/glm
- CustomLog /usr/local/var/httpd/log/glm-access_log common
- ErrorLog /usr/local/var/httpd/log/glm-error_log
+ CustomLog /var/log/httpd/glm-access_log common
+ ErrorLog /var/log/httpd/glm-error_log
  <Directory "/var/www/gforge-projects/glm/wiki/">
   AddHandler cgi-script .pl
   Options ExecCGI
@@ -294,8 +294,8 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 <VirtualHost *>
  ServerName qos.cougaar.org
  DocumentRoot /var/www/gforge-projects/qos
- CustomLog /usr/local/var/httpd/log/qos-access_log common
- ErrorLog /usr/local/var/httpd/log/qos-error_log
+ CustomLog /var/log/httpd/qos-access_log common
+ ErrorLog /var/log/httpd/qos-error_log
  <Directory "/var/www/gforge-projects/qos/wiki/">
   AddHandler cgi-script .pl
   Options ExecCGI
@@ -308,8 +308,8 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 <VirtualHost *>
  ServerName core.cougaar.org
  DocumentRoot /var/www/gforge-projects/core
- CustomLog /usr/local/var/httpd/log/core-access_log common
- ErrorLog /usr/local/var/httpd/log/core-error_log
+ CustomLog /var/log/httpd/core-access_log common
+ ErrorLog /var/log/httpd/core-error_log
  <Directory "/var/www/gforge-projects/core/wiki/">
   AddHandler cgi-script .pl
   Options ExecCGI
@@ -322,8 +322,8 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 <VirtualHost *>
  ServerName webserver.cougaar.org
  DocumentRoot /var/www/gforge-projects/webserver
- CustomLog /usr/local/var/httpd/log/webserver-access_log common
- ErrorLog /usr/local/var/httpd/log/webserver-error_log
+ CustomLog /var/log/httpd/webserver-access_log common
+ ErrorLog /var/log/httpd/webserver-error_log
  <Directory "/var/www/gforge-projects/webserver/wiki/">
   AddHandler cgi-script .pl
   Options ExecCGI
@@ -336,8 +336,8 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 <VirtualHost *>
  ServerName aggagent.cougaar.org
  DocumentRoot /var/www/gforge-projects/aggagent
- CustomLog /usr/local/var/httpd/log/aggagent-access_log common
- ErrorLog /usr/local/var/httpd/log/aggagent-error_log
+ CustomLog /var/log/httpd/aggagent-access_log common
+ ErrorLog /var/log/httpd/aggagent-error_log
  <Directory "/var/www/gforge-projects/aggagent/wiki/">
   AddHandler cgi-script .pl
   Options ExecCGI
@@ -350,8 +350,8 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 <VirtualHost *>
  ServerName build.cougaar.org
  DocumentRoot /var/www/gforge-projects/build
- CustomLog /usr/local/var/httpd/log/build-access_log common
- ErrorLog /usr/local/var/httpd/log/build-error_log
+ CustomLog /var/log/httpd/build-access_log common
+ ErrorLog /var/log/httpd/build-error_log
  <Directory "/var/www/gforge-projects/build/wiki/">
   AddHandler cgi-script .pl
   Options ExecCGI
@@ -364,8 +364,8 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 <VirtualHost *>
  ServerName community.cougaar.org
  DocumentRoot /var/www/gforge-projects/community
- CustomLog /usr/local/var/httpd/log/community-access_log common
- ErrorLog /usr/local/var/httpd/log/community-error_log
+ CustomLog /var/log/httpd/community-access_log common
+ ErrorLog /var/log/httpd/community-error_log
  <Directory "/var/www/gforge-projects/community/wiki/">
   AddHandler cgi-script .pl
   Options ExecCGI
@@ -378,8 +378,8 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 <VirtualHost *>
  ServerName planning.cougaar.org
  DocumentRoot /var/www/gforge-projects/planning
- CustomLog /usr/local/var/httpd/log/planning-access_log common
- ErrorLog /usr/local/var/httpd/log/planning-error_log
+ CustomLog /var/log/httpd/planning-access_log common
+ ErrorLog /var/log/httpd/planning-error_log
  <Directory "/var/www/gforge-projects/planning/wiki/">
   AddHandler cgi-script .pl
   Options ExecCGI
@@ -392,8 +392,8 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 <VirtualHost *>
  ServerName util.cougaar.org
  DocumentRoot /var/www/gforge-projects/util
- CustomLog /usr/local/var/httpd/log/util-access_log common
- ErrorLog /usr/local/var/httpd/log/util-error_log
+ CustomLog /var/log/httpd/util-access_log common
+ ErrorLog /var/log/httpd/util-error_log
  <Directory "/var/www/gforge-projects/util/wiki/">
   AddHandler cgi-script .pl
   Options ExecCGI
@@ -406,8 +406,8 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 <VirtualHost *>
  ServerName cf-ruby-cvs-exp.cougaar.org
  DocumentRoot /var/www/gforge-projects/cf-ruby-cvs-exp
- CustomLog /usr/local/var/httpd/log/cf-ruby-cvs-exp-access_log common
- ErrorLog /usr/local/var/httpd/log/cf-ruby-cvs-exp-error_log
+ CustomLog /var/log/httpd/cf-ruby-cvs-exp-access_log common
+ ErrorLog /var/log/httpd/cf-ruby-cvs-exp-error_log
  <Directory "/var/www/gforge-projects/cf-ruby-cvs-exp/wiki/">
   AddHandler cgi-script .pl
   Options ExecCGI
@@ -420,8 +420,8 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 <VirtualHost *>
  ServerName servicediscovery.cougaar.org
  DocumentRoot /var/www/gforge-projects/servicediscovery
- CustomLog /usr/local/var/httpd/log/servicediscovery-access_log common
- ErrorLog /usr/local/var/httpd/log/servicediscovery-error_log
+ CustomLog /var/log/httpd/servicediscovery-access_log common
+ ErrorLog /var/log/httpd/servicediscovery-error_log
  <Directory "/var/www/gforge-projects/servicediscovery/wiki/">
   AddHandler cgi-script .pl
   Options ExecCGI
@@ -434,8 +434,8 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 <VirtualHost *>
  ServerName yp.cougaar.org
  DocumentRoot /var/www/gforge-projects/yp
- CustomLog /usr/local/var/httpd/log/yp-access_log common
- ErrorLog /usr/local/var/httpd/log/yp-error_log
+ CustomLog /var/log/httpd/yp-access_log common
+ ErrorLog /var/log/httpd/yp-error_log
  <Directory "/var/www/gforge-projects/yp/wiki/">
   AddHandler cgi-script .pl
   Options ExecCGI
@@ -448,8 +448,8 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 <VirtualHost *>
  ServerName delta-blackjack.cougaar.org
  DocumentRoot /var/www/gforge-projects/delta-blackjack
- CustomLog /usr/local/var/httpd/log/delta-blackjack-access_log common
- ErrorLog /usr/local/var/httpd/log/delta-blackjack-error_log
+ CustomLog /var/log/httpd/delta-blackjack-access_log common
+ ErrorLog /var/log/httpd/delta-blackjack-error_log
  <Directory "/var/www/gforge-projects/delta-blackjack/wiki/">
   AddHandler cgi-script .pl
   Options ExecCGI
@@ -462,8 +462,8 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 <VirtualHost *>
  ServerName cougaar-pmd.cougaar.org
  DocumentRoot /var/www/gforge-projects/cougaar-pmd
- CustomLog /usr/local/var/httpd/log/cougaar-pmd-access_log common
- ErrorLog /usr/local/var/httpd/log/cougaar-pmd-error_log
+ CustomLog /var/log/httpd/cougaar-pmd-access_log common
+ ErrorLog /var/log/httpd/cougaar-pmd-error_log
  <Directory "/var/www/gforge-projects/cougaar-pmd/wiki/">
   AddHandler cgi-script .pl
   Options ExecCGI
@@ -476,8 +476,8 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 <VirtualHost *>
  ServerName profiler.cougaar.org
  DocumentRoot /var/www/gforge-projects/profiler
- CustomLog /usr/local/var/httpd/log/profiler-access_log common
- ErrorLog /usr/local/var/httpd/log/profiler-error_log
+ CustomLog /var/log/httpd/profiler-access_log common
+ ErrorLog /var/log/httpd/profiler-error_log
  <Directory "/var/www/gforge-projects/profiler/wiki/">
   AddHandler cgi-script .pl
   Options ExecCGI
@@ -490,8 +490,8 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 <VirtualHost *>
  ServerName mts.cougaar.org
  DocumentRoot /var/www/gforge-projects/mts
- CustomLog /usr/local/var/httpd/log/mts-access_log common
- ErrorLog /usr/local/var/httpd/log/mts-error_log
+ CustomLog /var/log/httpd/mts-access_log common
+ ErrorLog /var/log/httpd/mts-error_log
  <Directory "/var/www/gforge-projects/mts/wiki/">
   AddHandler cgi-script .pl
   Options ExecCGI
@@ -504,8 +504,8 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 <VirtualHost *>
  ServerName message-router.cougaar.org
  DocumentRoot /var/www/gforge-projects/message-router
- CustomLog /usr/local/var/httpd/log/message-router-access_log common
- ErrorLog /usr/local/var/httpd/log/message-router-error_log
+ CustomLog /var/log/httpd/message-router-access_log common
+ ErrorLog /var/log/httpd/message-router-error_log
  <Directory "/var/www/gforge-projects/message-router/wiki/">
   AddHandler cgi-script .pl
   Options ExecCGI
@@ -518,8 +518,8 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 <VirtualHost *>
  ServerName ccm.cougaar.org
  DocumentRoot /var/www/gforge-projects/ccm
- CustomLog /usr/local/var/httpd/log/ccm-access_log common
- ErrorLog /usr/local/var/httpd/log/ccm-error_log
+ CustomLog /var/log/httpd/ccm-access_log common
+ ErrorLog /var/log/httpd/ccm-error_log
  <Directory "/var/www/gforge-projects/ccm/wiki/">
   AddHandler cgi-script .pl
   Options ExecCGI
@@ -532,8 +532,8 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 <VirtualHost *>
  ServerName acme.cougaar.org
  DocumentRoot /var/www/gforge-projects/acme
- CustomLog /usr/local/var/httpd/log/acme-access_log common
- ErrorLog /usr/local/var/httpd/log/acme-error_log
+ CustomLog /var/log/httpd/acme-access_log common
+ ErrorLog /var/log/httpd/acme-error_log
  <Directory "/var/www/gforge-projects/acme/wiki/">
   AddHandler cgi-script .pl
   Options ExecCGI
@@ -546,8 +546,8 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 <VirtualHost *>
  ServerName cws.cougaar.org
  DocumentRoot /var/www/gforge-projects/cws
- CustomLog /usr/local/var/httpd/log/cws-access_log common
- ErrorLog /usr/local/var/httpd/log/cws-error_log
+ CustomLog /var/log/httpd/cws-access_log common
+ ErrorLog /var/log/httpd/cws-error_log
  <Directory "/var/www/gforge-projects/cws/wiki/">
   AddHandler cgi-script .pl
   Options ExecCGI
@@ -560,18 +560,26 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 <VirtualHost *>
  ServerName awb.cougaar.org
  DocumentRoot /var/www/gforge-projects/awb
- CustomLog /usr/local/var/httpd/log/awb-access_log common
- ErrorLog /usr/local/var/httpd/log/awb-error_log
+ CustomLog /var/log/httpd/awb-access_log common
+ ErrorLog /var/log/httpd/awb-error_log
 </VirtualHost>
 
 <VirtualHost *>
  ServerName fwsupport.cougaar.org
  DocumentRoot /var/www/gforge-projects/fwsupport
- CustomLog /usr/local/var/httpd/log/fwsupport-access_log common
- ErrorLog /usr/local/var/httpd/log/fwsupport-error_log
+ CustomLog /var/log/httpd/fwsupport-access_log common
+ ErrorLog /var/log/httpd/fwsupport-error_log
+</VirtualHost>
+
+<VirtualHost *>
+ ServerName probemeister.cougaar.org
+ DocumentRoot /var/www/gforge-projects/probemeister
+ CustomLog /var/log/httpd/probemeister-access_log common
+ ErrorLog /var/log/httpd/probemeister-error_log
 </VirtualHost>
 
 #PLACEHOLDER#
+
 
 
 
