--- a/support/viewcvs.conf
+++ b/support/viewcvs.conf
@@ -86,6 +86,7 @@ cvs_roots =
             cws  :  /cvsroot/cws,
             awb  :  /cvsroot/awb,
             fwsupport  :  /cvsroot/fwsupport,
+            probemeister  :  /cvsroot/probemeister,
 	csmart : /cvsroot/csmart,
 	cui : /cvsroot/cui,
 	delta-blackjack : /cvsroot/delta-blackjack,
