--- a/support/httpd.conf
+++ b/support/httpd.conf
@@ -578,7 +578,15 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  ErrorLog /var/log/httpd/probemeister-error_log
 </VirtualHost>
 
+<VirtualHost *>
+ ServerName robustness.cougaar.org
+ DocumentRoot /var/www/gforge-projects/robustness
+ CustomLog /var/log/httpd/robustness-access_log common
+ ErrorLog /var/log/httpd/robustness-error_log
+</VirtualHost>
+
 #PLACEHOLDER#
+
 
 
 
