--- a/support/viewcvs.conf
+++ b/support/viewcvs.conf
@@ -87,6 +87,7 @@ cvs_roots =
             awb  :  /cvsroot/awb,
             fwsupport  :  /cvsroot/fwsupport,
             probemeister  :  /cvsroot/probemeister,
+            robustness  :  /cvsroot/robustness,
 	csmart : /cvsroot/csmart,
 	cui : /cvsroot/cui,
 	delta-blackjack : /cvsroot/delta-blackjack,
