--- a/support/httpd.conf
+++ b/support/httpd.conf
@@ -34,8 +34,6 @@ Options ExecCGI FollowSymLinks
 
 DocumentRoot "/var/www/gforge-3.0/www"
 
-MaxClients 1000
-
 #Alias /wiki/ "/usr/share/moin/htdocs/" 
 #Alias /cougaarwiki/img/ "/usr/share/moin/htdocs/img/" 
 #ScriptAlias /cougaarwiki "/usr/share/moin/cougaarwiki/moin.cgi"
@@ -233,6 +231,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 	<Directory "/var/www/gforge-projects/cougaar/">
 	  Options Indexes
 	</Directory>
+ <Directory "/var/www/gforge-projects/cougaar/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -585,7 +590,47 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  ErrorLog /var/log/httpd/robustness-error_log
 </VirtualHost>
 
+<VirtualHost *>
+ ServerName securemonitor.cougaar.org
+ DocumentRoot /var/www/gforge-projects/securemonitor
+ CustomLog /var/log/httpd/securemonitor-access_log common
+ ErrorLog /var/log/httpd/securemonitor-error_log
+</VirtualHost>
+
+<VirtualHost *>
+ ServerName securebootstrap.cougaar.org
+ DocumentRoot /var/www/gforge-projects/securebootstrap
+ CustomLog /var/log/httpd/securebootstrap-access_log common
+ ErrorLog /var/log/httpd/securebootstrap-error_log
+</VirtualHost>
+
+<VirtualHost *>
+ ServerName securitycore.cougaar.org
+ DocumentRoot /var/www/gforge-projects/securitycore
+ CustomLog /var/log/httpd/securitycore-access_log common
+ ErrorLog /var/log/httpd/securitycore-error_log
+</VirtualHost>
+
+<VirtualHost *>
+ ServerName certauthority.cougaar.org
+ DocumentRoot /var/www/gforge-projects/certauthority
+ CustomLog /var/log/httpd/certauthority-access_log common
+ ErrorLog /var/log/httpd/certauthority-error_log
+</VirtualHost>
+
+<VirtualHost *>
+ ServerName secureutil.cougaar.org
+ DocumentRoot /var/www/gforge-projects/secureutil
+ CustomLog /var/log/httpd/secureutil-access_log common
+ ErrorLog /var/log/httpd/secureutil-error_log
+</VirtualHost>
+
 #PLACEHOLDER#
+
+
+
+
+
 
 
 
