--- a/support/viewcvs.conf
+++ b/support/viewcvs.conf
@@ -88,6 +88,11 @@ cvs_roots =
             fwsupport  :  /cvsroot/fwsupport,
             probemeister  :  /cvsroot/probemeister,
             robustness  :  /cvsroot/robustness,
+            securemonitor  :  /cvsroot/securemonitor,
+            securebootstrap  :  /cvsroot/securebootstrap,
+            securitycore  :  /cvsroot/securitycore,
+            certauthority  :  /cvsroot/certauthority,
+            secureutil  :  /cvsroot/secureutil,
 	csmart : /cvsroot/csmart,
 	cui : /cvsroot/cui,
 	delta-blackjack : /cvsroot/delta-blackjack,
