New logistics project

--- a/support/httpd.conf
+++ b/support/httpd.conf
@@ -625,7 +625,15 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  ErrorLog /var/log/httpd/secureutil-error_log
 </VirtualHost>
 
+<VirtualHost *>
+ ServerName logistics.cougaar.org
+ DocumentRoot /var/www/gforge-projects/logistics
+ CustomLog /var/log/httpd/logistics-access_log common
+ ErrorLog /var/log/httpd/logistics-error_log
+</VirtualHost>
+
 #PLACEHOLDER#
+
 
 
 
