--- a/support/viewcvs.conf
+++ b/support/viewcvs.conf
@@ -93,6 +93,7 @@ cvs_roots =
             securitycore  :  /cvsroot/securitycore,
             certauthority  :  /cvsroot/certauthority,
             secureutil  :  /cvsroot/secureutil,
+            logistics  :  /cvsroot/logistics,
 	csmart : /cvsroot/csmart,
 	cui : /cvsroot/cui,
 	delta-blackjack : /cvsroot/delta-blackjack,
