Show output, ignore any history

--- a/support/qpr_stats/qpr.conf
+++ b/support/qpr_stats/qpr.conf
@@ -64,7 +64,7 @@ OutputDir      /home/tom/tmp/webalizer
 # with the IncrementalName option below).  Please read at least the section
 # on Incremental processing in the README file before you enable this option.
 
-#Incremental	yes
+Incremental	no
 
 # IncrementalName allows you to specify the filename for saving the
 # incremental data in.  It is similar to the HistoryName option where the
@@ -191,7 +191,7 @@ HTMLTail <IMG SRC="msfree.png" ALT="100% Micro$oft free!">
 # "yes" or "no".  Default is "no".  Note: this does not suppress
 # warnings and errors (which are printed to stderr).
 
-Quiet		yes
+Quiet		no
 
 # ReallyQuiet will supress all messages including errors and
 # warnings.  Values can be 'yes' or 'no' with 'no' being the
@@ -199,7 +199,7 @@ Quiet		yes
 # the command line, so use with caution.  A value of 'no' has
 # no effect.
 
-ReallyQuiet yes
+ReallyQuiet no
 
 # TimeMe allows you to force the display of timing information
 # at the end of processing.  A value of 'yes' will force the
@@ -256,7 +256,7 @@ TimeMe		no
 # want to reproduce the reports from scratch.  USE WITH CAUTION!
 # Valid values are "yes" or "no".  Default is "no".
 
-#IgnoreHist	no
+IgnoreHist	yes
 
 # Country Graph allows the usage by country graph to be disabled.
 # Values can be 'yes' or 'no', default is 'yes'.
