A few new projects

--- a/support/httpd.conf
+++ b/support/httpd.conf
@@ -224,6 +224,9 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 </VirtualHost>
 
 <VirtualHost *>
+ <Directory "/var/www/gforge-projects/cougaar/software/">
+ Options FollowSymLinks Indexes
+ </Directory>
  ServerName cougaar.cougaar.org
  DocumentRoot /var/www/gforge-projects/cougaar
  CustomLog /var/log/httpd/cougaar-access_log common
@@ -632,7 +635,23 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  ErrorLog /var/log/httpd/logistics-error_log
 </VirtualHost>
 
+<VirtualHost *>
+ ServerName al-cdpredictor.cougaar.org
+ DocumentRoot /var/www/gforge-projects/al-cdpredictor
+ CustomLog /var/log/httpd/al-cdpredictor-access_log common
+ ErrorLog /var/log/httpd/al-cdpredictor-error_log
+</VirtualHost>
+
+<VirtualHost *>
+ ServerName exnihilo.cougaar.org
+ DocumentRoot /var/www/gforge-projects/exnihilo
+ CustomLog /var/log/httpd/exnihilo-access_log common
+ ErrorLog /var/log/httpd/exnihilo-error_log
+</VirtualHost>
+
 #PLACEHOLDER#
+
+
 
 
 
