--- a/support/viewcvs.conf
+++ b/support/viewcvs.conf
@@ -94,6 +94,8 @@ cvs_roots =
             certauthority  :  /cvsroot/certauthority,
             secureutil  :  /cvsroot/secureutil,
             logistics  :  /cvsroot/logistics,
+            al-cdpredictor  :  /cvsroot/al-cdpredictor,
+            exnihilo  :  /cvsroot/exnihilo,
 	csmart : /cvsroot/csmart,
 	cui : /cvsroot/cui,
 	delta-blackjack : /cvsroot/delta-blackjack,
