--- a/support/httpd.conf
+++ b/support/httpd.conf
@@ -15,6 +15,7 @@ LoadModule cgi_module         libexec/mod_cgi.so
 LoadModule php4_module        libexec/libphp4.so
 LoadModule auth_module        libexec/mod_auth.so
 LoadModule env_module        libexec/mod_env.so
+LoadModule rewrite_module     libexec/mod_rewrite.so
 
 TypesConfig /etc/mime.types
 DefaultType text/plain
@@ -26,10 +27,10 @@ LogFormat "%{User-agent}i" agent
 CustomLog /var/log/httpd/access_log common
 ErrorLog /var/log/httpd/error_log
 
-AddType application/x-httpd-php .php .phtml .php3
-AddType application/x-httpd-php-source .phps
-
+AddHandler application/x-httpd-php .php .phtml .php3
 AddHandler cgi-script .cgi
+RewriteEngine  on
+
 Options ExecCGI FollowSymLinks
 
 DocumentRoot "/var/www/gforge-3.0/www"
@@ -185,8 +186,10 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  CustomLog /var/log/httpd/support-access_log common
  ErrorLog /var/log/httpd/support-error_log
  Options Indexes
+ #Alias /wiki/ /var/www/gforge-projects/support/wiki/wiki.pl
  IndexOptions FancyIndexing
  <Directory "/var/www/gforge-projects/support/wiki/">
+  #RewriteRule ^/wiki/(.*)$ /wiki.pl?$1 [R]
   AddHandler cgi-script .pl
   Options ExecCGI
   AllowOverride All
@@ -570,6 +573,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/awb
  CustomLog /var/log/httpd/awb-access_log common
  ErrorLog /var/log/httpd/awb-error_log
+ <Directory "/var/www/gforge-projects/awb/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -577,6 +587,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/fwsupport
  CustomLog /var/log/httpd/fwsupport-access_log common
  ErrorLog /var/log/httpd/fwsupport-error_log
+ <Directory "/var/www/gforge-projects/fwsupport/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -584,6 +601,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/probemeister
  CustomLog /var/log/httpd/probemeister-access_log common
  ErrorLog /var/log/httpd/probemeister-error_log
+ <Directory "/var/www/gforge-projects/probemeister/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -591,6 +615,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/robustness
  CustomLog /var/log/httpd/robustness-access_log common
  ErrorLog /var/log/httpd/robustness-error_log
+ <Directory "/var/www/gforge-projects/robustness/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -598,6 +629,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/securemonitor
  CustomLog /var/log/httpd/securemonitor-access_log common
  ErrorLog /var/log/httpd/securemonitor-error_log
+ <Directory "/var/www/gforge-projects/securemonitor/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -605,6 +643,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/securebootstrap
  CustomLog /var/log/httpd/securebootstrap-access_log common
  ErrorLog /var/log/httpd/securebootstrap-error_log
+ <Directory "/var/www/gforge-projects/securebootstrap/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -612,6 +657,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/securitycore
  CustomLog /var/log/httpd/securitycore-access_log common
  ErrorLog /var/log/httpd/securitycore-error_log
+ <Directory "/var/www/gforge-projects/securitycore/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -619,6 +671,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/certauthority
  CustomLog /var/log/httpd/certauthority-access_log common
  ErrorLog /var/log/httpd/certauthority-error_log
+ <Directory "/var/www/gforge-projects/certauthority/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -626,6 +685,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/secureutil
  CustomLog /var/log/httpd/secureutil-access_log common
  ErrorLog /var/log/httpd/secureutil-error_log
+ <Directory "/var/www/gforge-projects/secureutil/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -633,6 +699,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/logistics
  CustomLog /var/log/httpd/logistics-access_log common
  ErrorLog /var/log/httpd/logistics-error_log
+ <Directory "/var/www/gforge-projects/logistics/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -640,6 +713,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/al-cdpredictor
  CustomLog /var/log/httpd/al-cdpredictor-access_log common
  ErrorLog /var/log/httpd/al-cdpredictor-error_log
+ <Directory "/var/www/gforge-projects/al-cdpredictor/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -647,9 +727,46 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/exnihilo
  CustomLog /var/log/httpd/exnihilo-access_log common
  ErrorLog /var/log/httpd/exnihilo-error_log
+ <Directory "/var/www/gforge-projects/exnihilo/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
+</VirtualHost>
+
+<VirtualHost *>
+ ServerName logplanner.cougaar.org
+ DocumentRoot /var/www/gforge-projects/logplanner
+ CustomLog /var/log/httpd/logplanner-access_log common
+ ErrorLog /var/log/httpd/logplanner-error_log
+ <Directory "/var/www/gforge-projects/logplanner/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
+</VirtualHost>
+
+<VirtualHost *>
+ ServerName firstpassagnt.cougaar.org
+ DocumentRoot /var/www/gforge-projects/firstpassagnt
+ CustomLog /var/log/httpd/firstpassagnt-access_log common
+ ErrorLog /var/log/httpd/firstpassagnt-error_log
+ <Directory "/var/www/gforge-projects/firstpassagnt/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 #PLACEHOLDER#
+
+
 
 
 
