--- a/support/viewcvs.conf
+++ b/support/viewcvs.conf
@@ -96,6 +96,8 @@ cvs_roots =
             logistics  :  /cvsroot/logistics,
             al-cdpredictor  :  /cvsroot/al-cdpredictor,
             exnihilo  :  /cvsroot/exnihilo,
+            logplanner  :  /cvsroot/logplanner,
+            firstpassagnt  :  /cvsroot/firstpassagnt,
 	csmart : /cvsroot/csmart,
 	cui : /cvsroot/cui,
 	delta-blackjack : /cvsroot/delta-blackjack,
